update zk